--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,11 @@
             <a href="{{ site.linkedin }}" target="_blank">Connect with me on LinkedIn</a>
         </p>
 
+        <!-- Add Credly link below the LinkedIn link -->
+        <p>
+          <a href="https://www.credly.com/users/carlos-barbosa.71a6836a" target="_blank">View my Certifications on Credly</a>
+        </p>
+
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
