--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background: #f8f9fa;
+  background: #d5ded7;
   color: #212529;
 }
 
